# TinyLCEL

./: .gitignore  README.md  configure_env.sh  pyproject.toml
examples/: azure_example.py  chat_azure_openai_from_client.py  chat_openai_from_client.py  complex_chain.py  embeddings_azure_openai.py  embeddings_cohere.py  embeddings_openai.py  embeddings_openai_from_client.py  pdf_to_md.py  prompt_template.py  simple_chain.py  structured_output_example.py
scripts/: render_mermaid  run_checks
scripts/git-hooks/: pre-commit
src/tinylcel/: chat_models.py  embeddings.py  itools.py  messages.py  output_parsers.py  prompts.py  py.typed  runnable.py
src/tinylcel/chat_models/: __init__.py  base.py  openai.py
src/tinylcel/embeddings/: __init__.py  base.py  cohere.py  openai.py
src/tinylcel/messages/: __init__.py  base.py  chunks.py  image_chunk.py
src/tinylcel/output_parsers/: __init__.py  base_parsers.py  pydantic_parser.py
src/tinylcel/providers/cohere/: __init__.py  embeddings.py
src/tinylcel/providers/openai/: __init__.py  chat_models.py  embeddings.py
src/tinylcel/utils/: auth.py  filemagic.py
tests/: test_chunks.py  test_image_chunk.py  test_itools.py  test_output_parsers.py  test_prompts.py  test_pydantic_output_parser.py  test_runnable.py
tests/chat_models/: __init__.py  test_openai.py  test_openai_chat.py  test_openai_chat_model.py
tests/embeddings/: __init__.py  test_cohere_embeddings.py  test_openai_embeddings.py
tests/utils/: test_auth.py  test_filemagic.py
