[project]
name = 'tinylcel'
version = '0.1.0'
description = 'A tiny implementation of LangChain Expression Language (LCEL)'
authors = [
    { name = 'Ali Mosavian', email = "ali@42labs.ai" },
]
readme = 'README.md'
requires-python = '>=3.12'

dependencies = [
]


[project.optional-dependencies]
dev = [
    'pytest==8.3.5',
    'pytest-cov==6.1.1',
    'pytest-asyncio==0.26.0',
    'ruff==0.11.8',
    'mypy==1.15.0',
    'mypy-extensions==1.1.0',
]

openai = [
    'openai==1.77.0',
]

[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'

[tool.mypy]
python_version = "3.12"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["tinylcel*"] 