[project]
name = 'tinylcel'
version = '0.1.5'
description = 'A tiny implementation of LangChain Expression Language (LCEL)'
authors = [
    { name = 'Ali Mosavian', email = "ali@42labs.ai" },
]
readme = 'README.md'
requires-python = '>=3.12'

dependencies = [
    'pyyaml>=6.0.2,<7.0.0',
    'types-pyyaml>=6.0.12,<7.0.0',
]


[project.optional-dependencies]
dev = [
    'mypy-extensions>=1.1.0,<2.0.0',
    'mypy>=1.15.0,<2.0.0',
    'pytest-asyncio>=0.26.0,<0.27.0',
    'pytest-cov>=6.1.1,<7.0.0',
    'pytest>=8.3.5,<9.0.0',
    'python-dotenv>=1.1.0,<2.0.0',
    'ruff>=0.11.8,<0.12.0'
]

openai = [
    'openai>=1.7.0,<2.0.0',
]

cohere = [
    'cohere>=5.0.0,<6.0.0'
]


[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'

[tool.mypy]
python_version = "3.12"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["tinylcel*"] 